samples/errors/undefined_var.gem
-- undefined_var.gem
start
  print name  -- Using 'name' before it's defined
  string name = "John"
finish